<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">




        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBblue"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/ll_u1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_light"
                android:orientation="horizontal"
                android:padding="10sp">

                <ImageView
                    android:id="@+id/ibMain"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:src="@drawable/ic_action_scale"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/ibUsers"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:layout_weight="1"

                    android:contentDescription="TODO"
                    android:src="@drawable/ic_action_user_m" />

                <ImageView
                    android:id="@+id/ibHistory"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_history" />

                <ImageView
                    android:id="@+id/ibTrends"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_trend" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_u2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_light"
                android:orientation="vertical"
                android:padding="5sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="5sp">

                    <ImageView
                        android:id="@+id/ivAdd"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:src="@drawable/ic_add" />

                    <ImageView
                        android:id="@+id/ivEdit"
                        android:layout_width="30sp"
                        android:layout_height="30sp"
                        android:layout_gravity="center"

                        android:layout_weight="1"
                        android:src="@drawable/ic_edit" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5sp">

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="5sp">

                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textColor="@color/colorBlack"
                                android:textSize="18sp" />

                            <TextView
                                android:id="@+id/etName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="5sp"
                                android:text="@string/empty_name"
                                android:textColor="@color/colorBlack"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="5sp">

                            <TextView
                                android:id="@+id/tvGender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gender"
                                android:textColor="@color/colorBlack" />

                            <RadioGroup
                                android:id="@+id/rgSex"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:baselineAligned="false"
                                android:orientation="horizontal"
                                android:paddingStart="5sp">

                                <RadioButton
                                    android:id="@+id/rbMale"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/male"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="12sp" />

                                <RadioButton
                                    android:id="@+id/rbFemale"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/female"
                                    android:textColor="@color/colorBlack"
                                    android:textSize="14sp" />
                            </RadioGroup>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="5sp">

                            <TextView
                                android:id="@+id/tvAge"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/birthday"
                                android:textColor="@color/colorBlack" />

                            <TextView
                                android:id="@+id/tvBirth"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="5sp"
                                android:text="@string/empty_date"
                                android:textColor="@color/colorBlack" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="5sp">

                            <TextView
                                android:id="@+id/tvHeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/height"
                                android:textColor="@color/colorBlack" />

                            <EditText
                                android:id="@+id/edHeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="numberSigned"
                                android:paddingStart="5sp"
                                android:text="@string/empty_height"
                                android:textColor="@color/colorBlack" />

                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/tvFigure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Figure" />

                            <RadioGroup
                                android:id="@+id/rg_Figure"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/rbAthlete"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Athlete" />

                                <RadioButton
                                    android:id="@+id/rbStandard"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="Standard" />
                            </RadioGroup>
                        </TableRow>

                        <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone">

                            <TextView
                                android:id="@+id/tvUnit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/units" />

                            <RadioGroup
                                android:id="@+id/rgUnit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/rbKg"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/unit_kg" />

                                <RadioButton
                                    android:id="@+id/rbLb"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/unit_lb" />
                            </RadioGroup>
                        </TableRow>

                    </TableLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llOk"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingBottom="10sp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/btOK"
                        android:layout_width="wrap_content"
                        android:layout_height="30sp"
                        android:layout_gravity="center|center_horizontal"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="OK"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:visibility="invisible" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_u3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_light"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_u2">

                <ListView
                    android:id="@+id/lv_users"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    android:dividerHeight="0dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_info_sel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_user_info"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tv_info_del"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/delete_user_info"
                android:textAlignment="center" />


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</android.support.design.widget.CoordinatorLayout>