<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBblue"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_m1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_light"
        android:orientation="horizontal"
        android:padding="10sp">

        <ImageView
            android:id="@+id/ibMain"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:src="@drawable/ic_action_scale"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_action_scale" />

        <ImageView
            android:id="@+id/ibUsers"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_weight="1"

            android:contentDescription="TODO"
            android:src="@drawable/ic_action_user_m" />

        <ImageView
            android:id="@+id/ibHistory"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_action_history" />

        <ImageView
            android:id="@+id/ibTrends"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_action_trend" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_m2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_light"
        android:orientation="vertical"
        android:padding="5sp">

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unit_kg"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivArrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/arrow_r" />

            <ImageView
                android:id="@+id/ibWeighing"
                android:layout_width="75sp"
                android:layout_height="75sp"
                android:layout_gravity="center"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:src="@drawable/scale_big" />

            <ImageView
                android:id="@+id/ivArrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/arrow_l" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_m3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_light"
        android:orientation="vertical"
        android:padding="5sp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivBtstat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_bt_off" />

                <TextView
                    android:id="@+id/tvDevice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="5sp"
                    android:paddingEnd="5sp"
                    android:text="@string/name_dev"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="5sp"
                    android:text="@string/status" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buScaning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_scan"
                    android:textSize="12sp"
                    android:visibility="gone" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <RadioGroup
                    android:id="@+id/rgUnit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbKg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/unit_kg" />

                    <RadioButton
                        android:id="@+id/rbLb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/unit_lb" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_m4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_white2"
        android:orientation="vertical"
        android:padding="5sp">

        <ListView
            android:id="@+id/lv_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:padding="10sp" />
    </LinearLayout>

</LinearLayout>